# Chibi

./: .gitmodules  CMakeLists.txt  Chibi.pro  README.md  chibiembedwidget.cpp  chibiembedwidget.h  chibiwindow.cpp  chibiwindow.h  chibiwindow.ui  main.cpp
.github/workflows/: build.yml
i18n/: en_GB.ts
